22.oct (lv)
      - fix export of MusicXML <direction> placement attribute for multi-staff systems
21.oct (lv)
      - fix import of MusicXML <wedge> vertical placement
      (db)
      - remove ts files from installer
20.oct (ws)
      - updated instruments.xml from Magnus Johansson
      (db)
      - remove the "All files" option from "Choose Instruments List"
      - correct misspelling in en_US
      (la)
      - remove Mac font hack
      - Mac has know the same default font than Windows and Linux
      - fix chordname input with stdchords on Mac
19.oct (lv)
      - fix import of MusicXML <dynamics> and <pedal> vertical placement
      - fix import of MusicXML <words> vertical placement and font
18.oct (ws)
      - fix: Make copy/paste between transposing instruments preserve
        concert pitch
      - fix: Acciaccaturas in transposing instruments get wrong pitch
      - fix: Playback of D.C. al Fine and volta
      - fix volta playback bug
      - fix: Start repeat does not appear on selected bar line
      - reanimated volta properties
      - "usable pitch range" is now editable in part properties dialog
17.oct (ws)
      - expanding palettes does not resize main window anymore
      - fix: Slurs not visible till completion in note entry mode
      - remove cursor when leaving note entry mode
      (la)
      - add catalan translation mscore_ca.ts
15.oct (tb)
      - correcting Norwegian iso code from no to nb
      (og)
      - conditional output of exportly's lilypond macros (\okt and
        \segno). bugfix for repeats.
      (la)
      - Move lines with staff
      - fix crash on playback with 8th and 16th
      - fix crash with note entry and remove part
      - fix transposing instruments playback wrong
14.oct (ws)
      - new style option to create a fixed number of measures/system optional
        of equal width
      (tb)
      - update Spanish translation by alkayata
      - update Danish translation by Morton Poulson
13.oct (og)