@@ -1,3 +1,6 @@
+23.oct (db)
+      - renamed "Notes" palette as "Grace Notes" palette
+      - updated Dutch translation from Jaap Plaisier
 22.oct (lv)
       - fix export of MusicXML <direction> placement attribute for multi-staff systems
 21.oct (lv)
